# pyNFC.iii

./: CMakeLists.txt  README.md
include/: D3Q15Lattice.h  D3Q19Lattice.h  D3Q27Lattice.h  LBM_DataHandler.h  LBM_HaloData.h  LBM_HaloDataOrganizer.h  Lattice.h  PartitionHelper.h  PyLBM_Interface.h
src/: D3Q15Lattice.cpp  D3Q19Lattice.cpp  D3Q27Lattice.cpp  LBM_DataHandler.cpp  LBM_HaloData.cpp  LBM_HaloDataOrganizer.cpp  Lattice.cpp  PartitionHelper.cpp  PyLBM_Interface.cpp
